General improvements, refactoring and the 'ezd' command

--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -2,7 +2,7 @@
 command = /home/easydeploy/bin/run.sh %(process_num)02d
 process_name = %(program_name)s-%(process_num)02d
 numprocs = ${EASYDEPLOY_PROCESS_NUMBER}
-directory=/tmp
+directory=/home/easydeploy/
 autostart=true
 autorestart=true
 startsecs=10
