--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -21,3 +21,26 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 stderr_capture_maxbytes=1MB
 serverurl=AUTO
+
+[program:gitpoll]
+command = /home/easydeploy/bin/gitpoll.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+exitcodes=0,2
+stopsignal=TERM
+stopwaitsecs=10
+user=easydeploy
+redirect_stderr=false
+stdout_logfile=/var/log/easydeploy/gitpoller.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+stderr_logfile=/var/log/easydeploy/gitpoller.err.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=10
+stderr_capture_maxbytes=1MB
+serverurl=AUTO
