--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -10,6 +10,8 @@ startretries=3
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
+stopasgroup=true
+killasgroup=true
 user=easydeploy
 redirect_stderr=false
 stdout_logfile=/var/log/easydeploy/run-%(process_num)02d.out.log
@@ -44,3 +46,24 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 stderr_capture_maxbytes=1MB
 serverurl=AUTO
+
+
+[program:serf]
+command = /usr/local/bin/serf agent -node=${DEPLOY_ENV}-${COMPONENT}-${EASYDEPLOY_HOST_IP} -tag deploy_env=${DEPLOY_ENV} -tag component=${COMPONENT} -event-handler /etc/serf/event-handler.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+exitcodes=0,2
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/serf.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
