Updates and fixesFirst attempt at introducing btsync and some additional security

--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -67,3 +67,23 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+[program:btsync]
+command = /usr/local/bin/btsync --config /etc/btsync.cfg
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+exitcodes=0,2
+stopsignal=TERM
+stopwaitsecs=10
+user=easydeploy
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/btsync.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
+
