Numerous improvements, including serf integration, better btsync, self deleting dirs, service discovery via files.

--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -49,7 +49,7 @@ serverurl=AUTO
 
 
 [program:serf]
-command = /usr/local/bin/serf agent -node=${DEPLOY_ENV}-${COMPONENT}-${EASYDEPLOY_HOST_IP} -tag deploy_env=${DEPLOY_ENV} -tag component=${COMPONENT} -event-handler /etc/serf/event-handler.sh
+command = /usr/local/bin/serf agent -node=${DEPLOY_ENV}-${COMPONENT}-${EASYDEPLOY_HOST_IP} -tag deploy_env=${DEPLOY_ENV} -tag component=${COMPONENT} -event-handler /etc/serf/event-handler.sh  -event-handler  member-join,member-leave,member-failed,member-update,member-reap=/etc/serf/handlers/membership-handler.sh
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
