--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -1,61 +1,77 @@
 [program:${COMPONENT}]
+priority= 3
 command = /home/easydeploy/bin/run.sh %(process_num)02d
 process_name = %(program_name)s-%(process_num)02d
 numprocs = ${EASYDEPLOY_PROCESS_NUMBER}
 directory=/home/easydeploy/
-autostart=true
+autostart=false
 autorestart=true
 startsecs=10
 startretries=3
 exitcodes=0
-stopsignal=TERM
+stopsignal=INT
 stopwaitsecs=10
 stopasgroup=true
 killasgroup=true
 user=easydeploy
-redirect_stderr=false
+redirect_stderr=true
 stdout_logfile=/var/log/easydeploy/run-%(process_num)02d.out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
-stderr_logfile=/var/log/easydeploy/run-%(process_num)02d.err.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=10
-stderr_capture_maxbytes=1MB
 serverurl=AUTO
 
 [program:gitpoll]
+priority= 2
 command = /home/easydeploy/bin/gitpoll.sh
 process_name = %(program_name)s
 numprocs = 1
-autostart=true
+autostart=false
 autorestart=true
 startsecs=10
 startretries=3
 exitcodes=0
-stopsignal=TERM
+stopsignal=INT
 stopwaitsecs=10
-user=easydeploy
-redirect_stderr=false
-stdout_logfile=/var/log/easydeploy/gitpoller.out.log
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/gitpoll.out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
-stderr_logfile=/var/log/easydeploy/gitpoller.err.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=10
-stderr_capture_maxbytes=1MB
 serverurl=AUTO
 
 
-[program:serf]
-command = /usr/local/bin/serf agent -node=${DEPLOY_ENV}-${COMPONENT}-${EASYDEPLOY_HOST_IP} -bind -${EASYDEPLOY_HOST_IP} -tag deploy_env=${DEPLOY_ENV} -tag component=${COMPONENT} -event-handler /etc/serf/event-handler.sh  -event-handler  member-join,member-leave,member-failed,member-update,member-reap=/etc/serf/handlers/membership-handler.sh
+[program:discovery]
+priority= 1
+command =  /home/easydeploy/bin/discovery.sh
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
 autorestart=true
 startsecs=10
-startretries=3
+startretries=20
+exitcodes=0
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/discovery.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
+
+[program:serf]
+priority= 0
+command =  /home/easydeploy/bin/serf-agent.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=60
 exitcodes=0
 stopsignal=TERM
 stopwaitsecs=10
@@ -67,5 +83,26 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+
+[program:logstash-ship]
+priority= 2
+command =  /usr/local/logstash/bin/logstash agent -f /etc/logstash.conf
+environment=HOME="/home/easydeploy"
+process_name = %(program_name)s
+numprocs = 1
+autostart=false
+autorestart=true
+startsecs=10
+startretries=60
+exitcodes=0
+stopsignal=TERM
+stopwaitsecs=10
+user=easydeploy
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/logstash-ship.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
 
 
