--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -106,7 +106,7 @@ serverurl=AUTO
 
 [program:logstash-ship]
 priority= 2
-command =  /usr/local/logstash/bin/logstash agent -f /etc/logstash.conf
+command =  /home/easydeploy/bin/logstash-ship.sh
 environment=HOME="/home/easydeploy"
 process_name = %(program_name)s
 numprocs = 1
