--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -10,7 +10,7 @@ startsecs=10
 startretries=3
 exitcodes=0
 stopsignal=INT
-stopwaitsecs=10
+stopwaitsecs=30
 stopasgroup=true
 killasgroup=true
 user=easydeploy
@@ -93,7 +93,7 @@ autorestart=true
 startsecs=10
 startretries=60
 exitcodes=0
-stopsignal=TERM
+stopsignal=INT
 stopwaitsecs=10
 user=root
 redirect_stderr=true
