--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -1,6 +1,6 @@
 [program:${COMPONENT}]
 priority= 3
-command = /home/easydeploy/bin/run.sh %(process_num)02d
+command = /home/easydeploy/bin/run-docker.sh %(process_num)02d
 process_name = %(program_name)s-%(process_num)02d
 numprocs = ${EASYDEPLOY_PROCESS_NUMBER}
 directory=/home/easydeploy/
@@ -10,7 +10,7 @@ startsecs=10
 startretries=3
 exitcodes=0
 stopsignal=INT
-stopwaitsecs=30
+stopwaitsecs=60
 stopasgroup=true
 killasgroup=true
 user=easydeploy
@@ -28,10 +28,11 @@ process_name = %(program_name)s
 numprocs = 1
 autostart=false
 autorestart=true
-startsecs=10
+startsecs=0
 startretries=3
+stopasgroup=true
 exitcodes=0
-stopsignal=INT
+stopsignal=TERM
 stopwaitsecs=10
 user=root
 redirect_stderr=true
@@ -50,7 +51,8 @@ numprocs = 1
 autostart=true
 autorestart=true
 startsecs=10
-startretries=20
+startretries=3
+stopasgroup=true
 exitcodes=0
 stopsignal=TERM
 stopwaitsecs=10
@@ -65,7 +67,7 @@ serverurl=AUTO
 
 [program:serf]
 priority= 0
-command =  /home/easydeploy/bin/serf-agent.sh
+command = /home/easydeploy/bin/serf-agent.sh
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
@@ -73,6 +75,7 @@ autorestart=true
 startsecs=10
 startretries=60
 exitcodes=0
+stopasgroup=true
 stopsignal=TERM
 stopwaitsecs=10
 user=root
@@ -93,7 +96,8 @@ autorestart=true
 startsecs=10
 startretries=60
 exitcodes=0
-stopsignal=INT
+stopasgroup=true
+stopsignal=TERM
 stopwaitsecs=10
 user=root
 redirect_stderr=true
@@ -115,8 +119,9 @@ autorestart=true
 startsecs=10
 startretries=60
 exitcodes=0
-stopsignal=TERM
-stopwaitsecs=10
+stopsignal=INT
+stopasgroup=true
+stopwaitsecs=30
 user=easydeploy
 redirect_stderr=true
 stdout_logfile=/var/log/easydeploy/logstash-ship.out.log
