--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -88,8 +88,8 @@ serverurl=AUTO
 
 [program:logstash-ship]
 priority= 2
-command =  /home/easydeploy/bin/logstash-ship.sh
-environment=HOME="/home/easydeploy"
+command =  /ezbin/logstash-ship.sh
+environment=HOME=/root
 process_name = %(program_name)s
 numprocs = 1
 autostart=false
@@ -100,9 +100,31 @@ exitcodes=0
 stopsignal=INT
 stopasgroup=true
 stopwaitsecs=30
-user=easydeploy
+user=root
 redirect_stderr=true
 stdout_logfile=/var/log/easydeploy/logstash-ship.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
+
+[program:squid]
+priority= 0
+command = /ezbin/squid.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=60
+exitcodes=0
+stopasgroup=true
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/squid.out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
