--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -42,6 +42,26 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+[program:stats]
+priority= 0
+command =  /home/easydeploy/bin/stats.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+stopasgroup=true
+exitcodes=0
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/stats.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
 
 [program:serf]
 priority= 0
