--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -21,6 +21,31 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+
+[program:datadog-agent]
+priority= 1
+command = /home/easydeploy/bin/datadog-agent.sh
+process_name = %(program_name)s
+numprocs = 1
+directory=/home/easydeploy/
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+exitcodes=0
+stopsignal=INT
+stopwaitsecs=60
+stopasgroup=true
+killasgroup=true
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/datadog-agent.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
+
 [program:discovery]
 priority= 1
 command =  /home/easydeploy/bin/discovery.sh
