--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -22,7 +22,7 @@ stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
 
-[program:datadog-agent]
+[program:datadog_agent]
 priority= 1
 command = /home/easydeploy/bin/datadog-agent.sh
 process_name = %(program_name)s
