--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -1,5 +1,5 @@
 [program:${COMPONENT}]
-priority= 3
+priority= 50
 command = /home/easydeploy/bin/run-docker.sh %(process_num)02d
 process_name = %(program_name)s-%(process_num)02d
 numprocs = ${EASYDEPLOY_PROCESS_NUMBER}
@@ -23,11 +23,11 @@ serverurl=AUTO
 
 
 [program:datadog_agent]
-priority= 1
+priority= 40
 command = /home/easydeploy/bin/datadog-agent.sh
 process_name = %(program_name)s
 numprocs = 1
-directory=/home/easydeploy/
+directory=/root
 autostart=true
 autorestart=true
 startsecs=10
@@ -43,11 +43,11 @@ stdout_logfile=/var/log/easydeploy/datadog-agent.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
-serverurl=AUTO
+
 
 
 [program:discovery]
-priority= 1
+priority= 20
 command =  /home/easydeploy/bin/discovery.sh
 process_name = %(program_name)s
 numprocs = 1
@@ -68,7 +68,7 @@ stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
 [program:stats]
-priority= 0
+priority= 30
 command =  /home/easydeploy/bin/stats.sh
 process_name = %(program_name)s
 numprocs = 1
@@ -76,7 +76,6 @@ autostart=true
 autorestart=true
 startsecs=10
 startretries=3
-stopasgroup=true
 exitcodes=0
 stopsignal=TERM
 stopwaitsecs=10
@@ -88,8 +87,28 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
-[program:serf]
+[program:clean_on_boot]
 priority= 0
+command =  /home/easydeploy/bin/clean.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=unexpected
+startsecs=0
+startretries=10
+exitcodes=0
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/clean_on_boot.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
+[program:serf]
+priority= 10
 command = /home/easydeploy/bin/serf-agent.sh
 process_name = %(program_name)s
 numprocs = 1
@@ -110,7 +129,7 @@ stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
 [program:logstash-ship]
-priority= 2
+priority= 30
 command =  /ezbin/logstash-ship.sh
 environment=HOME=/root
 process_name = %(program_name)s
