--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -150,3 +150,25 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+[program:health-check-server]
+priority= 100
+command =  /ezbin/health_check_server.sh
+environment=HOME=/root
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=false
+startsecs=10
+startretries=60
+exitcodes=0
+stopsignal=INT
+stopasgroup=true
+stopwaitsecs=30
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/health-check-server.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
