--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -9,8 +9,8 @@ autorestart=true
 startsecs=10
 startretries=3
 exitcodes=0
-stopsignal=INT
-stopwaitsecs=60
+stopsignal=TERM
+stopwaitsecs=10
 stopasgroup=true
 killasgroup=true
 user=easydeploy
