--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -157,11 +157,11 @@ environment=HOME=/root
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
-autorestart=false
+autorestart=true
 startsecs=10
-startretries=60
+startretries=1000
 exitcodes=0
-stopsignal=INT
+stopsignal=TERM
 stopasgroup=true
 stopwaitsecs=30
 user=root
