--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -172,3 +172,23 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+
+[program:btsync]
+priority= 100
+command =  /usr/local/bin/btsync --config /etc/btsync.conf
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=5
+exitcodes=0
+stopsignal=TERM
+stopasgroup=true
+stopwaitsecs=30
+user=btsync
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/btsync.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
