--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -186,7 +186,7 @@ exitcodes=0
 stopsignal=TERM
 stopasgroup=true
 stopwaitsecs=30
-user=btsync
+user=easydeploy
 redirect_stderr=true
 stdout_logfile=/var/log/easydeploy/btsync.out.log
 stdout_logfile_maxbytes=1MB
