--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -175,7 +175,7 @@ serverurl=AUTO
 
 [program:btsync]
 priority= 100
-command =  /usr/local/bin/btsync --config /etc/btsync.conf
+command =  /usr/local/bin/btsync --nodaemon --config /etc/btsync.conf
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
