--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -1,4 +1,5 @@
 [program:${COMPONENT}]
+environment=HOME=/home/easydeploy/
 priority= 50
 command = /home/easydeploy/bin/run-docker.sh %(process_num)02d
 process_name = %(program_name)s-%(process_num)02d
