--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -167,7 +167,7 @@ stopasgroup=true
 stopwaitsecs=30
 user=root
 redirect_stderr=true
-stdout_logfile=/var/log/easydeploy/health-check-server.out.log
+stdout_logfile=/ezlog/health-check-server.out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
@@ -176,7 +176,7 @@ serverurl=AUTO
 
 [program:btsync]
 priority= 100
-command =  /usr/local/bin/btsync --nodaemon --config /etc/btsync.conf
+command =  /ezbin/btsync.sh
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
@@ -189,7 +189,7 @@ stopasgroup=true
 stopwaitsecs=30
 user=easydeploy
 redirect_stderr=true
-stdout_logfile=/var/log/easydeploy/btsync.out.log
+stdout_logfile=/ezlog/btsync.out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
