--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -151,6 +151,27 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
+[program:weave]
+priority= 30
+command = /ezbin/weave-agent.sh
+process_name = %(program_name)s
+numprocs = 1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=60
+exitcodes=0
+stopasgroup=true
+stopsignal=TERM
+stopwaitsecs=10
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/easydeploy/weave.out.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
+stdout_capture_maxbytes=1MB
+serverurl=AUTO
+
 [program:logstash-ship]
 priority= 30
 command =  /ezbin/logstash-ship.sh
