--- a/remote/template-run.conf
+++ b/remote/template-run.conf
@@ -88,9 +88,9 @@ stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
 serverurl=AUTO
 
-[program:clean_on_boot]
+[program:on_boot]
 priority= 0
-command =  /home/easydeploy/bin/clean.sh
+command =  /ezbin/on_boot.sh
 process_name = %(program_name)s
 numprocs = 1
 autostart=true
